--- a/index.html
+++ b/index.html
@@ -2,135 +2,93 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Verano Surrealista – Desafío Dalí</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Raleway&display=swap" rel="stylesheet">
+  <title>Verano Surrealista – Publicación</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
   <style>
     * { margin:0; padding:0; box-sizing:border-box }
-    body { background:#000; color:#fff; font-family:'Raleway',sans-serif }
-    section { padding:2rem; max-width:600px; margin:0 auto }
-    .hidden { display:none }
-    h1 { font-family:'Oswald',sans-serif; text-transform:uppercase; text-align:center; margin-bottom:2rem }
-    label, select, button { font-family:'Oswald',sans-serif; text-transform:uppercase; color:#fff }
-    select {
-      width:100%; padding:.75rem; margin-bottom:1rem;
-      background:#222f3f; border:2px solid #222f3f; color:#fff;
-    }
-    button {
-      background:#222f3f; border:none; padding:.75rem 1.5rem;
-      cursor:pointer; margin:.5rem .5rem 0 0; display:inline-block;
-    }
-    .center { text-align:center }
+    body { background: #000; color: #fff; font-family: 'Oswald', sans-serif; text-transform: uppercase; }
+    .container { max-width: 400px; margin: 2rem auto; padding: 0 1rem; }
+    h1 { text-align: center; margin-bottom: 1.5rem; }
     .camera-container {
-      position:relative;
-      width:100%;
-      margin:0 auto;
-      background:#000;
+      position: relative;
+      width: 100%;
+      /* 3:4 aspect ratio (height/width * 100%) = 133.33% */
+      padding-top: 133.33%;
+      background: #222;
+      overflow: hidden;
+      margin-bottom: 1rem;
     }
     .camera-container video,
-    .camera-container img.frame {
-      position:absolute;
-      top:0; left:0;
-      width:100%; height:100%;
-      object-fit:cover;
+    .camera-container img {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      object-fit: cover;
+    }
+    button {
+      background: #222f3f;
+      color: #fff;
+      border: none;
+      padding: .75rem 1.5rem;
+      cursor: pointer;
+      margin: .5rem .25rem 0 .25rem;
+      width: calc(50% - .5rem);
     }
   </style>
 </head>
 <body>
-
-  <!-- 1) Selección de marco -->
-  <section id="page-init">
-    <h1>Verano Surrealista</h1>
-    <label for="frameSelect">Selecciona marco:</label>
-    <select id="frameSelect">
-      <option value="historia">Historia (9:16)</option>
-      <option value="publicacion">Publicación (1:1)</option>
-    </select>
-    <div class="center">
-      <button id="startBtn">Continuar</button>
-    </div>
-  </section>
-
-  <!-- 2) Cámara + overlay -->
-  <section id="page-camera" class="hidden">
-    <h1>Captura tu foto</h1>
-    <div class="camera-container" id="camContainer" style="padding-top:177.78%;">
+  <div class="container">
+    <h1>Publicación 3:4</h1>
+    <div class="camera-container" id="camContainer">
       <video id="video" autoplay playsinline></video>
-      <img id="overlay" class="frame" crossorigin="anonymous">
+      <img id="overlay" src="assets/Marcopublicacion.png" alt="Marco Publicación">
     </div>
-    <div class="center">
-      <button id="captureBtn">Capturar y Descargar</button>
-      <button id="resetBtn">Cambiar marco</button>
+    <div style="text-align:center;">
+      <button id="startBtn">Iniciar Cámara</button>
+      <button id="captureBtn" disabled>Capturar y Descargar</button>
     </div>
-  </section>
+  </div>
 
   <script>
-    const urls = {
-      historia:   'assets/Marcohistoria.png',
-      publicacion:'assets/Marcopublicacion.png'
-    };
-    const ratios = {
-      historia: 177.78,   // 16:9 -> height/width *100%
-      publicacion: 100    // 1:1 -> 100%
-    };
+    const startBtn   = document.getElementById('startBtn');
+    const captureBtn = document.getElementById('captureBtn');
+    const video      = document.getElementById('video');
+    const overlay    = document.getElementById('overlay');
 
-    const pageInit    = document.getElementById('page-init');
-    const pageCam     = document.getElementById('page-camera');
-    const frameSelect = document.getElementById('frameSelect');
-    const startBtn    = document.getElementById('startBtn');
-    const resetBtn    = document.getElementById('resetBtn');
-    const captureBtn  = document.getElementById('captureBtn');
-    const video       = document.getElementById('video');
-    const overlay     = document.getElementById('overlay');
-    const camContainer= document.getElementById('camContainer');
-
-    function show(section) {
-      pageInit.classList.add('hidden');
-      pageCam.classList.add('hidden');
-      section.classList.remove('hidden');
-    }
+    let stream;
 
     startBtn.onclick = async () => {
-      const key = frameSelect.value;
-      // Set aspect ratio container
-      camContainer.style.paddingTop = ratios[key] + '%';
-      // Set overlay frame
-      overlay.src = urls[key];
-      // Start camera
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: 'environment' }
-        });
+        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
         video.srcObject = stream;
-        show(pageCam);
+        startBtn.disabled = true;
+        captureBtn.disabled = false;
       } catch (e) {
         alert('No se pudo acceder a la cámara.');
       }
     };
 
     captureBtn.onclick = () => {
-      const w = video.videoWidth, h = video.videoHeight;
+      const w = video.videoWidth;
+      const h = video.videoHeight;
       const canvas = document.createElement('canvas');
       canvas.width = w;
       canvas.height = h;
       const ctx = canvas.getContext('2d');
+      // Dibuja el video
       ctx.drawImage(video, 0, 0, w, h);
+      // Dibuja el marco
       ctx.drawImage(overlay, 0, 0, w, h);
+      // Descarga
       const link = document.createElement('a');
-      link.download = 'foto-surrealista.png';
+      link.download = 'foto-publicacion.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
+      // Detener cámara
+      stream.getTracks().forEach(t => t.stop());
+      startBtn.disabled = false;
+      captureBtn.disabled = true;
     };
-
-    resetBtn.onclick = () => {
-      if (video.srcObject) {
-        video.srcObject.getTracks().forEach(track => track.stop());
-        video.srcObject = null;
-      }
-      show(pageInit);
-    };
-
-    // Initialize
-    show(pageInit);
   </script>
 </body>
 </html>
