--- a/index.html
+++ b/index.html
@@ -2,100 +2,149 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Verano Surrealista – Publicación</title>
+  <title>Verano Surrealista – Desafío Dalí</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Raleway&display=swap" rel="stylesheet">
   <style>
     * { margin:0; padding:0; box-sizing:border-box }
-    body { background:#000; color:#fff; font-family:'Raleway',sans-serif; }
-    .container { max-width:400px; margin:2rem auto; text-align:center; }
-    h1 { font-family:'Oswald',sans-serif; text-transform:uppercase; margin-bottom:1rem; }
-    input[type="file"] { display:block; margin:1rem auto; color:#fff; }
-    canvas { display:block; margin:1rem auto; background:#222; }
+    body { background:#000; color:#fff; font-family:'Raleway',sans-serif }
+    section { padding:2rem; max-width:600px; margin:0 auto }
+    .hidden { display:none }
+    h1 { font-family:'Oswald',sans-serif; text-transform:uppercase; text-align:center; margin-bottom:2rem }
+    label, select, button { font-family:'Oswald',sans-serif; text-transform:uppercase; color:#fff }
+    select {
+      width:100%; padding:.75rem; margin-bottom:1rem;
+      background:#222f3f; border:2px solid #222f3f; color:#fff;
+    }
     button {
-      background:#222f3f; color:#fff; border:none;
-      padding:.75rem 1.5rem; cursor:pointer; font-family:'Oswald',sans-serif;
-      text-transform:uppercase; margin-top:1rem;
+      background:#222f3f; border:none; padding:.75rem 1.5rem;
+      cursor:pointer; margin:.5rem .5rem 0 0; display:inline-block;
     }
-    .instructions {
-      font-family:'Oswald',sans-serif;
-      text-transform:uppercase;
-      color:#fff;
-      margin:1rem 0;
-      line-height:1.4;
+    .center { text-align:center }
+    .camera-container {
+      position:relative;
+      width:100%;
+      max-width:600px;
+      margin:0 auto 1rem;
+      height:0;
+      overflow:hidden;
+      background:#000;
     }
-    .hidden { display:none; }
+    .camera-container video {
+      position:absolute;
+      top:0; left:0;
+      width:100%; height:100%;
+      object-fit:cover;
+      z-index:1;
+    }
+    .camera-container img.frame {
+      position:absolute;
+      top:0; left:0;
+      width:100%; height:100%;
+      object-fit:cover;
+      z-index:2;
+      pointer-events:none;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Página principal: carga y captura -->
-  <div class="container" id="page-app">
-    <h1>Publicación 3:4</h1>
-    <input type="file" id="photoInput" accept="image/*">
-    <canvas id="canvas" width="300" height="400"></canvas>
-    <button id="downloadBtn" disabled>Descargar Foto</button>
-  </div>
+  <!-- 1) Selección de marco -->
+  <section id="page-init">
+    <h1>Verano Surrealista</h1>
+    <label for="frameSelect">Selecciona marco:</label>
+    <select id="frameSelect">
+      <option value="historia">Historia (9:16)</option>
+      <option value="publicacion">Publicación (1:1)</option>
+    </select>
+    <div class="center">
+      <button id="startBtn">Continuar</button>
+    </div>
+  </section>
 
-  <!-- Página final: instrucciones para redes -->
-  <div class="container hidden" id="page-final">
-    <h1>¡Listo!</h1>
-    <p class="instructions">
-      Sube tu foto a tus redes sociales, etiquétenos como <strong>@desafiodalimx</strong> y utiliza los hashtags:
-    </p>
-    <p class="instructions">
-      #VeranoSurrealista  #EnigmaDalí  #DesafíoDalí
-    </p>
-  </div>
+  <!-- 2) Cámara + overlay -->
+  <section id="page-camera" class="hidden">
+    <h1>Captura tu foto</h1>
+    <div id="camContainer" class="camera-container">
+      <video id="video" autoplay playsinline></video>
+      <img id="overlay" class="frame" crossorigin="anonymous">
+    </div>
+    <div class="center">
+      <button id="captureBtn">Capturar y Descargar</button>
+      <button id="resetBtn">Cambiar marco</button>
+    </div>
+  </section>
 
   <script>
-    const photoInput  = document.getElementById('photoInput');
-    const canvas      = document.getElementById('canvas');
-    const ctx         = canvas.getContext('2d');
-    const downloadBtn = document.getElementById('downloadBtn');
-    const pageApp     = document.getElementById('page-app');
-    const pageFinal   = document.getElementById('page-final');
-    const frameImg    = new Image();
-    frameImg.src      = 'assets/Marcopublicacion.png'; // tu PNG 300×400
-
-    photoInput.onchange = () => {
-      const file = photoInput.files[0];
-      if (!file) return;
-      const img = new Image();
-      img.onload = () => {
-        const cw = canvas.width, ch = canvas.height;
-        const rPhoto = img.width / img.height;
-        const rCanvas= cw / ch;
-        let dw, dh, dx, dy;
-
-        if (rPhoto > rCanvas) {
-          dh = ch;
-          dw = dh * rPhoto;
-          dx = (cw - dw) / 2;
-          dy = 0;
-        } else {
-          dw = cw;
-          dh = dw / rPhoto;
-          dx = 0;
-          dy = (ch - dh) / 2;
-        }
-
-        ctx.clearRect(0,0,cw,ch);
-        ctx.drawImage(img, dx, dy, dw, dh);
-        ctx.drawImage(frameImg, 0, 0, cw, ch);
-        downloadBtn.disabled = false;
-      };
-      img.src = URL.createObjectURL(file);
+    const urls = {
+      historia:   'assets/Marcohistoria.png',
+      publicacion:'assets/Marcopublicacion.png'
+    };
+    const ratios = {
+      historia:    (16/9)*100,  // 177.78%
+      publicacion: 100          // 100%
     };
 
-    downloadBtn.onclick = () => {
+    const pageInit    = document.getElementById('page-init');
+    const pageCam     = document.getElementById('page-camera');
+    const frameSelect = document.getElementById('frameSelect');
+    const startBtn    = document.getElementById('startBtn');
+    const resetBtn    = document.getElementById('resetBtn');
+    const captureBtn  = document.getElementById('captureBtn');
+    const video       = document.getElementById('video');
+    const overlay     = document.getElementById('overlay');
+    const camContainer= document.getElementById('camContainer');
+
+    function show(section) {
+      pageInit.classList.add('hidden');
+      pageCam.classList.add('hidden');
+      section.classList.remove('hidden');
+    }
+
+    startBtn.onclick = async () => {
+      // Ajusta ratio y overlay
+      const key = frameSelect.value;
+      const ratio = ratios[key];
+      camContainer.style.paddingBottom = ratio + '%';
+      overlay.src = urls[key];
+
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' }
+        });
+        video.srcObject = stream;
+        show(pageCam);
+      } catch (e) {
+        alert('No se pudo acceder a la cámara.');
+      }
+    };
+
+    captureBtn.onclick = () => {
+      const w = video.videoWidth;
+      const h = video.videoHeight;
+      const canvas = document.createElement('canvas');
+      canvas.width = w;
+      canvas.height = h;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(video, 0, 0, w, h);
+      ctx.drawImage(overlay, 0, 0, w, h);
+
       const link = document.createElement('a');
-      link.download = 'foto-publicacion.png';
+      link.download = 'foto-surrealista.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
-      // Mostrar la página final
-      pageApp.classList.add('hidden');
-      pageFinal.classList.remove('hidden');
     };
+
+    resetBtn.onclick = () => {
+      // Detiene cámara
+      if (video.srcObject) {
+        video.srcObject.getTracks().forEach(t => t.stop());
+        video.srcObject = null;
+      }
+      show(pageInit);
+    };
+
+    // Mostrar inicial
+    show(pageInit);
   </script>
 </body>
 </html>
