--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     h1 { font-family:'Oswald',sans-serif; text-transform:uppercase; margin:1rem 0; }
     .camera-container {
       position:relative;
-      width:320px;
-      height:427px; /* 3:4 ratio */
-      margin:1rem auto;
-      overflow:hidden;
-      background:#111;
+      width:320px; height:427px; /* 3:4 ratio */
+      margin:1rem auto; overflow:hidden; background:#111;
     }
     .camera-container video,
     .camera-container img {
@@ -21,15 +18,10 @@
       width:100%; height:100%; object-fit:cover;
     }
     button, textarea, a {
-      display:block;
-      width:80%; max-width:320px;
-      margin:1rem auto;
-      background:#222f3f; color:#fff;
-      border:none; padding:.75rem;
-      font-family:'Oswald',sans-serif;
-      text-transform:uppercase;
-      cursor:pointer;
-      text-decoration:none;
+      display:block; width:80%; max-width:320px;
+      margin:1rem auto; background:#222f3f; color:#fff;
+      border:none; padding:.75rem; font-family:'Oswald',sans-serif;
+      text-transform:uppercase; cursor:pointer; text-decoration:none;
     }
     textarea { height:4rem; resize:none; }
     .hidden { display:none; }
@@ -38,7 +30,7 @@
 <body>
   <h1>Publicación 3:4</h1>
 
-  <!-- Cámara -->
+  <!-- Paso 1: cámara -->
   <div id="step-camera">
     <div class="camera-container">
       <video id="video" autoplay playsinline></video>
@@ -48,7 +40,7 @@
     <button id="captureBtn" class="hidden">Capturar Foto</button>
   </div>
 
-  <!-- Resultado -->
+  <!-- Paso 2: resultado y hashtags -->
   <div id="step-result" class="hidden">
     <canvas id="canvas" width="320" height="427"></canvas>
     <button id="downloadBtn">Descargar Foto</button>
@@ -56,22 +48,35 @@
 #VeranoSurrealista #DesafioDaliEnMéxico #PlanBenDDaliMX #Enigmadalinianoddmx
     </textarea>
     <button id="copyBtn">Copiar Hashtags</button>
-    <a href="https://www.instagram.com/desafiodalimx/" target="_blank">Síguenos en Instagram</a>
+  </div>
+
+  <!-- Paso 3: volver al inicio -->
+  <div id="step-done" class="hidden">
+    <h1>¡Hecho!</h1>
+    <a href="https://sites.google.com/view/enigma-daliniano/home" target="_blank">
+      Volver al inicio
+    </a>
   </div>
 
   <script>
-    const startBtn   = document.getElementById('startBtn');
-    const captureBtn = document.getElementById('captureBtn');
-    const downloadBtn= document.getElementById('downloadBtn');
-    const copyBtn    = document.getElementById('copyBtn');
-    const video      = document.getElementById('video');
-    const overlay    = document.getElementById('overlay');
-    const canvas     = document.getElementById('canvas');
-    const ctx        = canvas.getContext('2d');
-    const stepCam    = document.getElementById('step-camera');
-    const stepRes    = document.getElementById('step-result');
-    const hashtags   = document.getElementById('hashtags');
+    const startBtn    = document.getElementById('startBtn');
+    const captureBtn  = document.getElementById('captureBtn');
+    const downloadBtn = document.getElementById('downloadBtn');
+    const copyBtn     = document.getElementById('copyBtn');
+    const video       = document.getElementById('video');
+    const overlay     = document.getElementById('overlay');
+    const canvas      = document.getElementById('canvas');
+    const ctx         = canvas.getContext('2d');
+    const hashtags    = document.getElementById('hashtags');
+    const stepCam     = document.getElementById('step-camera');
+    const stepRes     = document.getElementById('step-result');
+    const stepDone    = document.getElementById('step-done');
     let stream;
+
+    function show(section) {
+      [stepCam, stepRes, stepDone].forEach(el => el.classList.add('hidden'));
+      section.classList.remove('hidden');
+    }
 
     startBtn.onclick = async () => {
       try {
@@ -85,11 +90,10 @@
     };
 
     captureBtn.onclick = () => {
-      ctx.drawImage(video,0,0,canvas.width,canvas.height);
-      ctx.drawImage(overlay,0,0,canvas.width,canvas.height);
-      stream.getTracks().forEach(t=>t.stop());
-      stepCam.classList.add('hidden');
-      stepRes.classList.remove('hidden');
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
+      stream.getTracks().forEach(t => t.stop());
+      show(stepRes);
     };
 
     downloadBtn.onclick = () => {
@@ -97,6 +101,7 @@
       link.download = 'foto-publicacion.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
+      show(stepDone);
     };
 
     copyBtn.onclick = () => {
@@ -104,6 +109,10 @@
       document.execCommand('copy');
       alert('Hashtags copiados');
     };
+
+    // Inicia en cámara
+    show(stepCam);
   </script>
 </body>
 </html>
+
